more java 21 changes